[package]
name = "nau7802-async"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Rust driver for the NAU7802 I2C ADC"

[dependencies]
byteorder = {version = "1.5.0", default-features = false}
embedded-hal-async = "1.0.0"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
defmt = "0.3"
embassy-time = { version = "0.3.2", features = ["std", "generic-queue"] }
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = {version ="1.42.0", features = ["full"]}

[features]
defmt = ["dep:defmt"]
